--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.5.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.5.1",
+    "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
